--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=banking
+spring.datasource.url=jdbc:postgresql://localhost:5434/bank
+spring.datasource.username=user
+spring.datasource.password=password
+
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
