UPD changelog + ADD classes in JPA , DRIVING.WEB, useCases

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.password=password
 
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+# JPA / Hibernate config
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+# Désactiver l'initialisation SQL automatique
+spring.sql.init.mode=never
