Fix bug et implementaation des classes JPA authController...etc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 # Désactiver l'initialisation SQL automatique
 spring.sql.init.mode=never
+security.jwt.secret=your-secret-key-change-this-in-production-min-256-bits
+security.jwt.expiration-seconds=3600
+
