UPD SECURITYConfig ,loginRequest, RegisterRequest

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,7 @@ spring.jpa.show-sql=true
 spring.sql.init.mode=never
 security.jwt.secret=your-secret-key-change-this-in-production-min-256-bits
 security.jwt.expiration-seconds=3600
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
 
